# p3exporter-fritzbox-smarthome

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Containerfile  Makefile  README.md  p3.yml.example  requirements-dev.txt  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/plugins/: modules.rst  p3eFritzBox.collector.rst  p3eFritzBox.rst
p3eFritzBox/: __init__.py
p3eFritzBox/collector/: smarthome.py
