[metadata]
name = p3exporter-fritzbox-smarthome
version = 1.0.0
description = Fritz!Box p3exporter collector module
long_description = file: README.md
long_description_content_type = text/markdown
url = http://codeaffen.org/projects/p3efritzbox

author = Christian Meißner
author_email = cme@codeaffen.org
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = true
test_suite = tests
setup_requires = setuptools
install_requires =
    pyfritzhome
    p3exporter >= 1.2.0
tests_requires = nose

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
ignore =
    F401,
    E501
max-line-length = 88
exclude =
    .git,
    .eggs,
    __pycache__,
    tests/,
    docs/,
    build/,
    dist/
deps = wheel, flake8-colors
max-complexity = 10
import-order-style = google
application-import-names = flake8

[nosetests]
with-coverage = 1
cover-xml = 1
cover-branches = 1
cover-package = pyfritzhome

[pep257]
ignore =
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D203,
    D204
